--- a/back-slad/package.json
+++ b/back-slad/package.json
@@ -33,7 +33,8 @@
     "passport-jwt": "^4.0.1",
     "prisma": "^6.4.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "stripe": "^17.7.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
